@@ -1,6 +1,7 @@
 Cacti CHANGELOG
 
 0.8.6h
+-bug#0000585: Graphing fails using AREA/STACK/LINE/HRULE/VRULE without defined color
 -bug: Stop MySQL connect messages from appearing in user interface
 -bug: Allow primary keys other than "ID" from saving properly in function sql_save
 -bug: Allow primary keys other than "ID" to be handled properly using the html code
